Updated example usage.

--- a/README
+++ b/README
@@ -1,14 +1,48 @@
 termcolor
 =========
 
-Output terminal colors in Common Lisp.
+Output ANSI terminal colors in Common Lisp. See termcolor.lisp for
+available colors (`grep defcolor termcolor.lisp`).
 
 Usage
 -----
 
-> (load (compile-file "termcolor"))
+Load termcolor.lisp:
 
-> (progn
-    (write-string (termcolor:color :cyan :bg :black :bright t))
-    (write-string "hello world")
-    nil)
+    (load (compile-file "termcolor"))
+
+Change the foreground color:
+
+    (termcolor:fg :red)
+
+Change the background color:
+
+    (termcolor:bg :cyan)
+
+Change the style:
+
+    (termcolor:style :bright)
+
+Change multiple things in one go:
+
+    (termcolor:color :fg :red :bg :black :style :dim)
+
+Reset things:
+
+    (termcolor:fg :reset)
+    (termcolor:bg :reset)
+    (termcolor:style :reset)
+
+Reset everything:
+
+    (termcolor:reset)
+
+By default, the escape sequences are written to standard output. To
+write to a different stream, use the STREAM keyword arg:
+
+    (termcolor:fg :red :stream s)
+
+To not write to any stream, and just return the escape sequence as a
+string, use the PRINT arg:
+
+    (termcolor:fg :red :print nil)
